--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ article {
   font-size: 1.05rem;
   background-color: #f5400f;
 }
+
 /* --------------- About Me --------------- */
 /* .AboutMe_container {
   width: 100%;
@@ -202,4 +203,66 @@ article {
 .AboutMe_field-value {
   font-size: 1rem;
   font-weight: 400;
+}
+/* --------------- Skills --------------- */
+#skills {
+  background-color: #2c1b60;
+}
+.Skills_title {
+  color: white;
+}
+
+/* --------------- archiving --------------- */
+#archiving {
+  background-color: #222222;
+}
+.Archiving_title {
+  color: white;
+}
+
+/* --------------- Projects --------------- */
+/* #projects {
+}
+.Projects_title {
+} */
+
+/* --------------- footer --------------- */
+#footer {
+  height: 10rem;
+  padding-top: 3rem;
+  text-align: center;
+  background-color: #222222;
+}
+.Footer_icons {
+  margin-bottom: 1rem;
+}
+.Footer_icon-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+  padding: 2px;
+  margin: 0 0.5rem;
+  border: 2px solid white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.discord,
+.instagram {
+  border: none;
+}
+.Footer_icon {
+  font-size: 3rem;
+  color: #f0e6ee;
+}
+.discord-icon {
+  font-size: 2.5rem;
+}
+.Footer_icon-wrapper:hover {
+  opacity: 0.8;
+}
+
+.Footer_copyright {
+  font-size: 0.9rem;
+  color: #f0e6ee;
 }
