--- a/style.css
+++ b/style.css
@@ -225,6 +225,26 @@ li {
   color: white;
 }
 
+.Skills_tech-stacks-container {
+  display: flex;
+}
+.Skills_tech-stacks {
+  width: 17rem;
+  padding: 1.5rem;
+  margin: 0 auto 2rem;
+  border-radius: 1rem;
+  background-color: white;
+  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.7);
+}
+.Skills_stacks-title {
+  padding-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
+  border-bottom: 1px solid #ccc;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #f4623a;
+}
+
 /* --------------- archiving --------------- */
 #archiving {
   background-color: #222222;
@@ -232,15 +252,14 @@ li {
 .Archiving_title {
   color: white;
 }
-.Archiving_git-hub-container {
+.Archiving_git-hub {
+  display: block;
   text-align: left;
-  width: 35%;
-  margin: auto;
+  width: 35rem;
   padding: 2rem;
+  margin: auto;
   border-radius: 2rem;
   background-color: #f5f5f5;
-}
-.Archiving_git-hub {
   text-decoration: none;
   cursor: pointer;
 }
