--- a/style.css
+++ b/style.css
@@ -12,10 +12,8 @@ article {
   text-align: center;
 }
 .Container {
-  /* width: 100%;
-  max-width: 80rem; */
-  /* padding: 4rem 2rem; */
   width: 80%;
+  max-width: 71rem;
   padding: 4% 2%;
   margin: 0 auto;
 }
@@ -98,10 +96,19 @@ li {
 
 /* --------------- Home --------------- */
 #home {
-  background: url("images/background.png") center/cover no-repeat;
+  background: linear-gradient(
+      180deg,
+      rgba(153, 102, 204, 0.3) 0,
+      rgba(153, 102, 204, 0.3) 90%
+    ),
+    url("images/background.png") center/cover no-repeat;
   height: 100vh;
 }
-
+.Home_container {
+  width: 80%;
+  padding: 4% 2%;
+  margin: 0 auto;
+}
 .Home_img1 {
   position: absolute;
   width: 25%;
@@ -117,7 +124,6 @@ li {
     transform: translatey(-40px);
   }
 }
-
 .Home_container {
   position: absolute;
   width: 80%;
@@ -135,7 +141,6 @@ li {
   background-size: 25rem;
   transform: scaleX(-1) rotate(-15deg);
 }
-
 .Home_title {
   font-family: "Black Han Sans", sans-serif;
   font-weight: 400;
@@ -178,7 +183,6 @@ li {
   padding: 4rem 2rem;
   margin: 0 auto;
 } */
-
 .AboutMe_infos {
   display: flex;
   flex-wrap: wrap;
@@ -217,6 +221,7 @@ li {
   font-size: 1rem;
   font-weight: 400;
 }
+
 /* --------------- Skills --------------- */
 #skills {
   background-color: #2c1b60;
@@ -224,9 +229,9 @@ li {
 .Skills_title {
   color: white;
 }
-
 .Skills_tech-stacks-container {
   display: flex;
+  justify-content: space-between;
 }
 .Skills_tech-stacks {
   width: 17rem;
@@ -257,11 +262,12 @@ li {
   text-align: left;
   width: 35rem;
   padding: 2rem;
-  margin: auto;
+  margin: 0 auto 2rem;
   border-radius: 2rem;
   background-color: #f5f5f5;
   text-decoration: none;
   cursor: pointer;
+  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.8);
 }
 .Archiving_img-wrapper {
   display: block;
@@ -281,11 +287,84 @@ li {
 }
 
 /* --------------- Projects --------------- */
-/* #projects {
+#projects {
+  background-color: #ffc107;
 }
-.Projects_title {
-} */
-
+.Projects_section-title {
+  border-bottom: 1.7px solid black;
+}
+.Projects_project {
+  padding: 3rem;
+  margin: 0 auto 2rem;
+  border-radius: 1rem;
+  background-color: white;
+  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.3);
+}
+.Projects_project-title {
+  padding-bottom: 0.5rem;
+  font-family: "Black Han Sans", sans-serif;
+  font-weight: 400;
+  font-size: 2.5rem;
+  color: #222222;
+  text-align: center;
+}
+.Projects_project-period {
+  margin-bottom: 2rem;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #6c757d;
+  text-align: center;
+  opacity: 0.8;
+}
+.Projects_project-info {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.Projects_project-img-wrapper {
+  width: 50%;
+  margin-right: 3rem;
+}
+.Projects_project-img {
+  width: 100%;
+}
+.Projects_project-descriptions {
+  width: calc(50% - 3rem);
+  text-align: left;
+}
+.Projects_project-main-description {
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #ccc;
+}
+.Projects_project-description {
+  margin-bottom: 1rem;
+}
+.Projects_project-label::before {
+  content: "✔";
+  display: inline;
+  padding-right: 0.5rem;
+}
+.Projects_project-label {
+  /* display: inline-block; */
+  float: left;
+  vertical-align: top;
+  width: 8.4rem;
+  font-weight: 900;
+  font-size: 1rem;
+}
+.Projects_project-value {
+  display: inline-block;
+  vertical-align: bottom;
+  width: calc(100% - 8.4rem);
+}
+.Projects_url {
+  color: #258ddb;
+  cursor: pointer;
+  text-decoration: none;
+  word-break: break-all;
+}
 /* --------------- footer --------------- */
 #footer {
   height: 10rem;
@@ -321,7 +400,6 @@ li {
 .Footer_icon-wrapper:hover {
   opacity: 0.8;
 }
-
 .Footer_copyright {
   font-size: 0.9rem;
   color: #f0e6ee;
