--- a/style.css
+++ b/style.css
@@ -245,14 +245,14 @@ p {
 }
 .Skills_tech-stacks {
   width: 17rem;
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem 2.5rem;
   margin: 0 2rem 2rem;
-  border-radius: 1rem;
+  border-radius: 0.7rem;
   background-color: rgb(255, 246, 228);
   /* box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.7); */
 }
 .Skills_tech-stacks-title {
-  margin: 1.5rem 0;
+  margin: 1rem 0 2.5rem;
   font-size: 1.5rem;
   font-weight: 700;
   color: #003b1b;
@@ -290,7 +290,7 @@ p {
   width: 50%;
   padding: 2rem;
   margin: 0 auto 2rem;
-  border-radius: 2rem;
+  border-radius: 0.7rem;
   background-color: #003b1b;
   text-decoration: none;
   cursor: pointer;
@@ -323,7 +323,7 @@ p {
 .Projects_project {
   padding: 3rem;
   margin: 0 auto 2rem;
-  border-radius: 1rem;
+  border-radius: 0.7rem;
   background-color: white;
   /* box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.3); */
 }
